# srtextool

./: .gitignore  CMakeLists.txt  README.md  release.sh  todo.txt
cmake/: toolchain-lin32.cmake  toolchain-lin64.cmake  toolchain-win32.cmake  toolchain-win64.cmake
src/: byteio.hpp  common.hpp  ddsfile.cpp  ddsfile.hpp  errors.hpp  headerfile.cpp  headerfile.hpp  path.hpp
src/cli/: cmd_add.cpp  cmd_check.cpp  cmd_delete.cpp  cmd_extract.cpp  cmd_list.cpp  cmd_modify.cpp  main.cpp  shared.cpp  shared.hpp
src/gcc/: abi_fix.hpp  new_abi.cpp  old_abi.cpp
